--- a/index.html
+++ b/index.html
@@ -2,16 +2,8 @@
 
 <html>
 <body>
-<h1>olinapps.com</h1>
+<h1>olinstudents.com</h1>
 
-<p>A list of handy apps for Olin students, by Olin students.</p>
-
-<ul>
-<li><a href="http://fwol.in"><b>fwol.in, the Olin Community Portal<b> <small>(Tim Ryan 2013.5)</small></a></li>
-<li><a href="http://map.olinapps.com/"><b>Maurauder's Map<b> <small>(Julian Ceipek 2014)</small></a></li>
-<li><a href="http://dominion.olinapps.com/"><b>Dominion</b> <small>(Cypress Frankenfeld 2014)</small></a></li>
-</ul>
-
-<p>Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> to add youself to the list!</p>
+<p>Hosting for Olin College students. Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> to get a domain.</p>
 </body>
 </html>
