--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 
 <html>
-<link href="//static.olinapps.com/olinstar.css" rel="stylesheet">
+<head>
+    <title>Olin Students</title>
+    <link href="//static.olinapps.com/olinstar.css" rel="stylesheet">
+</head>
 <body>
-<h1>olinstudents.com</h1>
+    <header>
+    <h1>Olin Students.com</h1>
+    <p>Hosting for personal sites for Olin students. Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> with questions or hosting your own personal site.</p>
+    </header>
 
-<p>Hosting for Olin College students. Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> to get a domain.</p>
+    <dl>
+    <dt><a href="http://madison.olinstudents.com">Madison May (2016)</a></dt>
+    </dl>
+
+    <footer>
+    <ul>
+    	<li class="apps"><a href="//olinapps.com/">olin<b>apps</b>.com</a></li>
+    	<li class="students"><a href="//olinstudents.com/">olin<b>students</b>.com</a></li>
+    	<li class="clubs"><a href="//olinclubs.com/">olin<b>clubs</b>.com</a></li>
+    	<li class="projects"><a href="//olinprojects.com/">olin<b>projects</b>.com</a></li>
+    </ul>
+    </footer>
 </body>
 </html>
