--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link href="//static.olinapps.com/olinstar.css" rel="stylesheet">
 </head>
 <body>
+    <ul id="olinstar">
+    	<li class="apps"><a href="//olinapps.com/">olin<b>apps</b>.com</a></li>
+    	<li class="students"><a href="//olinstudents.com/">olin<b>students</b>.com</a></li>
+    	<li class="clubs"><a href="//olinclubs.com/">olin<b>clubs</b>.com</a></li>
+    	<li class="projects"><a href="//olinprojects.com/">olin<b>projects</b>.com</a></li>
+    </ul>
+
     <header>
     <h1>Olin Students.com</h1>
     <p>Hosting for personal sites for Olin students. Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> with questions or hosting your own personal site.</p>
@@ -14,14 +21,5 @@
     <dl>
     <dt><a href="http://madison.olinstudents.com">Madison May (2016)</a></dt>
     </dl>
-
-    <footer>
-    <ul>
-    	<li class="apps"><a href="//olinapps.com/">olin<b>apps</b>.com</a></li>
-    	<li class="students"><a href="//olinstudents.com/">olin<b>students</b>.com</a></li>
-    	<li class="clubs"><a href="//olinclubs.com/">olin<b>clubs</b>.com</a></li>
-    	<li class="projects"><a href="//olinprojects.com/">olin<b>projects</b>.com</a></li>
-    </ul>
-    </footer>
 </body>
 </html>
