--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   </header>
 
   <div class="container-fluid">
-    <h1><a href="/">Olin Students</a></h1>
+    <h1><a href="/">Olin Students</a>.com</h1>
     <div id="body">
       <p>Personal websites and online portfolios for Olin students.</p>
 
       <style>
-      #them-students dt { float: left; width: 33%; margin: 0 0 10px; text-align: center; font-size: 16px; }
+      #them-students dt { float: left; width: 33%; margin: 0 0 25px; text-align: center; font-size: 16px; }
       #them-students { overflow: auto; margin-bottom: 0; }
       </style>
 
