--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
       </dl>
 
-      <p><small>Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> for free hosting or a _____.olinstudents.com domain name.</small></p>
+      <p><small>Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> for free hosting or a <i>your name</i>.olinstudents.com domain.</small></p>
     </div>
   </div>
 </body>
