--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
       </style>
 
       <dl id="them-students">
-      <dt><a href="http://madison.olinstudents.com">Madison May <small>'16</small></a></dt>
-      <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
       <dt><a href="http://mollyfarison.com">Molly Farison <small>'13</small></a></dt>
+      <dt><a href="http://jonamckay.com">Jon McKay <small>'13</small></a></dt>
+      <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
+      <dt><a href="http://madison.olinstudents.com">Madison May <small>'16</small></a></dt>
       </dl>
 
-      <p><small>Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> for free hosting or a <i>your name</i>.olinstudents.com domain.</small></p>
+      <p><small>Contact <a href="mailto:timothy.ryan@students.olin.edu">Tim Ryan 2013</a> for free hosting or a <i>name</i>.olinstudents.com domain.</small></p>
     </div>
   </div>
 </body>
