--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <dl id="them-students">
       <dt><a href="http://mollyfarison.com">Molly Farison <small>'13</small></a></dt>
       <dt><a href="http://jonamckay.com">Jon McKay <small>'13</small></a></dt>
+      <dt><a href="HTTP://AARONJGREENBERG.COM">Aaron Greenberg <small>'13</small></a></dt>
       <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
       <dt><a href="http://madison.olinstudents.com">Madison May <small>'16</small></a></dt>
