--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <dt><a href="http://students.olin.edu/2013/rmcmullen">Robert McMullen <small>'13</small></a></dt>
       <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
+      <dt><a href="http://www.flickr.com/photos/franz_eric_schneider_portfolios">Franz Schneider <small>'15</small></a></dt>
       <dt><a href="http://madison.olinstudents.com">Madison May <small>'16</small></a></dt>
       </dl>
 
