--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
       <p>Personal websites and online portfolios for Olin students.</p>
 
       <style>
-      #them-students dt { float: left; width: 33%; margin: 0 0 25px; text-align: center; font-size: 16px; }
+      #them-students dt { float: left; width: 33%; text-align: center; font-size: 16px; }
+      #them-students a { padding: 10px 0 15px; display: block; }
+      #them-students a:hover { background: #fff; }
       #them-students { overflow: auto; margin-bottom: 0; }
       </style>
 
       <dl id="them-students">
-      <dt><a href="http://mollyfarison.com">Molly Farison <small>'13</small></a></dt>
       <dt><a href="http://jonamckay.com">Jon McKay <small>'13</small></a></dt>
       <dt><a href="HTTP://AARONJGREENBERG.COM">Aaron Greenberg <small>'13</small></a></dt>
+      <dt><a href="http://www.drewheine.com">Andrew Heine <small>'13</small></a></dt>
       <dt><a href="http://students.olin.edu/2013/rmcmullen">Robert McMullen <small>'13</small></a></dt>
+      <dt><a href="http://mollyfarison.com">Molly Farison <small>'13.5</small></a></dt>
       <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
+      <dt><a href="http://itdaniher.com">Ian Daniher <small>'14</small></a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
+      <dt><a href="http://about.me/brettrowley">Brett Rowley <small>'14</small></a></dt>
       <dt><a href="http://www.flickr.com/photos/franz_eric_schneider_portfolios">Franz Schneider <small>'15</small></a></dt>
       <dt><a href="http://nickeyre.com">Nick Eyre <small>'15</small></a></dt>
       <dt><a href="http://madison.olinstudents.com">Madison May <small>'16</small></a></dt>
