--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       <dt><a href="http://mollyfarison.com">Molly Farison <small>'13.5</small></a></dt>
       <dt><a href="http://timryan.org">Tim Ryan <small>'13.5</small></a></dt>
       <dt><a href="http://itdaniher.com">Ian Daniher <small>'14</small></a></dt>
+      <dt><a href="http://juliana.io">Juliana Nazare <small>'14</small></a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee <small>'14</small></a></dt>
       <dt><a href="http://about.me/brettrowley">Brett Rowley <small>'14</small></a></dt>
       <dt><a href="http://www.flickr.com/photos/franz_eric_schneider_portfolios">Franz Schneider <small>'15</small></a></dt>
