--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <dt><a href="http://www.ercjns.com">Eric Jones</a></dt>
       <dt><a href="http://aiswaryakolisetty.com">Aiswarya Kolisetty</a></dt>
       <dt><a href="http://caseylandey.com">Casey Landey</a></dt>
+      <dt><a href="http://jenny-ma.weebly.com">Jenny Ma</a></dt>
       <dt><a href="http://jonamckay.com">Jon McKay</a></dt>
       <dt><a href="http://students.olin.edu/2013/rmcmullen">Robert McMullen</a></dt>
       <dt><a href="http://timryan.org">Tim Ryan</a></dt>
