--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
       <h4>2013</h4>
       <dl class="them-students">
+      <dt><a href="http://ibeitia.com">Iñigo Beitia</a></dt>
       <dt><a href="http://jezzpaul.com">Paul Booth</a></dt>
       <dt><a href="http://ericadchin.weebly.com">Erica Chin</a></dt>
       <dt><a href="http://reyner.be">Reyner Crosby</a></dt>
@@ -60,6 +61,7 @@
       <dt><a href="http://juliana.io">Juliana Nazare</a></dt>
       <dt><a href="http://roboticmayhem.com">Nick Ostrom</a></dt>
       <dt><a href="http://about.me/brettrowley">Brett Rowley</a></dt>
+      <dt><a href="http://dantesantos.com/">Dante Santos</a></dt>
       <dt><a href="http://weeprojects.weebly.com">Adela Wee</a></dt>
       </dl>
       
