--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <h4>2013</h4>
       <dl class="them-students">
-      <dt><a href="http://ibeitia.com">Iñigo Beitia</a></dt>
+      <dt><a href="http://ibeitia.com">I&ntilde;igo Beitia</a></dt>
       <dt><a href="http://jezzpaul.com">Paul Booth</a></dt>
       <dt><a href="http://ericadchin.weebly.com">Erica Chin</a></dt>
       <dt><a href="http://reyner.be">Reyner Crosby</a></dt>
