--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <h4>2015</h4>
       <dl class="them-students">
       <dt><a href="http://nickeyre.com">Nick Eyre</a></dt>
+      <dt><a href="http://www.alecradford.com/">Alec Radford</a></dt>
       <dt><a href="http://www.flickr.com/photos/franz_eric_schneider_portfolios">Franz Schneider</a></dt>
       <dt><a href="http://evansimpson.com">Evan Simpson</a></dt>
       <dt><a href="http://jessica.sutantio.com">Jessica Sutantio</a></dt>
