--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <dt><a href="HTTP://AARONJGREENBERG.COM">Aaron Greenberg</a></dt>
       <dt><a href="http://www.drewheine.com">Andrew Heine</a></dt>
       <dt><a href="http://michaelheyns.com">Michael Heyns</a></dt>
+      <dt><a href="http://jialiyahuang.com/">Jialiya Huang</a></dt>
       <dt><a href="http://www.ercjns.com">Eric Jones</a></dt>
       <dt><a href="http://aiswaryakolisetty.com">Aiswarya Kolisetty</a></dt>
       <dt><a href="http://caseylandey.com">Casey Landey</a></dt>
