--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="http://olinapps.com/static/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="http://olinapps.com/static/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="http://olinapps.com/static/style.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery.min.js"></script>
 </head>
 
 <body class="slim">
@@ -22,6 +23,7 @@
   <div class="container-fluid">
     <h1><a href="/">Olin Students</a>.com</h1>
     <div id="body">
+      <p style="float: right; margin: 5px 0 0"><span onclick="_t = $('.span3 a'); _t = _t[(Math.random()*_t.length)|0].href; window.location.href = _t" class="btn btn-success btn-mini">Randomize!</span></p>
       <p style="margin: 10px 0 25px">The personal websites and online portfolios of Olin College students.</p>
 
       <style>
